--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -33,10 +33,26 @@
     display: flex;
     flex-direction:row;  
 }
-#red , #yellow , #blue , #white{
+#red , #yellow , #green, #blue , #white{
     width:40px;
     height :40px;
     border:1px solid rgb(109, 109, 109); 
     margin-right: 20px; 
     list-style: none;
+}
+
+#red {
+    background-color: red;
+}
+
+#green {
+    background-color: green;
+}
+
+#yellow {
+    background-color: yellow;
+}
+
+#blue {
+    background-color: blue;
 }
