--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -33,7 +33,7 @@
     display: flex;
     flex-direction:row;  
 }
-#red , #yellow , #green, #blue , #white{
+#red , #yellow , #green, #blue , #white, #color-red, #color-green, #color-yellow, #color-blue{
     width:40px;
     height :40px;
     border:1px solid rgb(109, 109, 109); 
@@ -41,18 +41,29 @@
     list-style: none;
 }
 
-#red {
+#red, #color-red {
     background-color: red;
 }
 
-#green {
+#green, #color-green {
     background-color: green;
 }
 
-#yellow {
+#yellow, #color-yellow {
     background-color: yellow;
 }
 
-#blue {
+#blue, #color-blue {
     background-color: blue;
+}
+
+.login-box {
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+}
+
+#colorPicker {
+    display: flex;
+    flex-direction: row;
 }
