Small positioning update

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -70,7 +70,7 @@ header {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 10vh;
+    margin-top: 5vh;
 }
 
 #logoArea {
@@ -85,9 +85,9 @@ h1 {
 }
 
 #playersInfo {
-    width: 15vw;
-    margin: 30px;
-    padding: 20px;
+    width: 20%;
+    margin-right: 20px;
+    padding-right: 10px;
 }
 
 h2 {
