--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -131,8 +131,11 @@ hr {
     text-align: center;
     padding-top: 10px;
     margin-bottom: 10px;
+    color: #000;
+    font-size: 10px;
 }
 
+ 
 #chatBox {
     width: 100%;
     height: 40%;
@@ -190,6 +193,7 @@ hr {
     background-color: #fff;
     border-radius: 10px;
     text-align: center;
+    color: #000;
 }
 
 /* Rows of grid */
@@ -206,7 +210,17 @@ hr {
     font-size: 10px;
     color: #000;
 }
-
+/* facitRows of picture for coloring in the game  */
+#facitRow1 ,#facitRow2 ,#facitRow3 ,#facitRow4 ,#facitRow5 ,#facitRow6 ,#facitRow7 ,#facitRow8 ,#facitRow9 ,#facitRow10,#facitRow11 ,#facitRow12 ,#facitRow13 ,#facitRow14,#facitRow15    {
+    display: flex;
+    flex-direction:row;   
+}
+/* facites of grid */
+#facit1 ,#facit2 ,#facit3 ,#facit4 , #facit5 ,#facit6 ,#facit7 ,#facit8 ,#facit9 , #facit10 , #facit11 ,#facit12 ,#facit13 ,#facit14 , #facit15 , #facit16 ,#facit17 ,#facit18 ,#facit19 , #facit20 , #facit21 ,#facit22 ,#facit23 ,#facit24 , #facit25 , #facit26 ,#facit27 ,#facit28 ,#facit29 , #facit30 , #facit31 ,#facit32 ,#facit33 ,#facit34 , #facit35, #facit36 ,#facit37 ,#facit38 ,#facit39 , #facit40, #facit41 ,#facit42 ,#facit43 ,#facit44 , #facit45, #facit46 ,#facit47 ,#facit48 ,#facit49 , #facit50 , #facit51 ,#facit52 ,#facit53 ,#facit54 , #facit55 , #facit56 ,#facit57 ,#facit58 ,#facit59 , #facit60,#facit61 ,#facit62 ,#facit63 ,#facit64 , #facit65, #facit66 ,#facit67 ,#facit68 ,#facit69 , #facit70, #facit71 ,#facit72 ,#facit73 ,#facit74 , #facit75 , #facit76 ,#facit77 ,#facit78 ,#facit79 , #facit80 , #facit81 ,#facit82 ,#facit83 ,#facit84 , #facit85 , #facit86 ,#facit87 ,#facit88 ,#facit89 , #facit90 , #facit91 ,#facit92 ,#facit93 ,#facit94 , #facit95 ,#facit96 ,#facit97 ,#facit98 ,#facit99 , #facit100 , #facit101 ,#facit102 ,#facit103 ,#facit104 , #facit105 ,#facit106 ,#facit107 ,#facit108 ,#facit109 , #facit110 , #facit111 ,#facit112 ,#facit113 ,#facit114 , #facit115 , #facit116 ,#facit117 ,#facit118 ,#facit119 , #facit120 , #facit121 ,#facit122 ,#facit123 ,#facit124 , #facit125 , #facit126 ,#facit127 ,#facit128 ,#facit129 , #facit130 , #facit131 ,#facit132 ,#facit133 ,#facit134 , #facit135 , #facit136 ,#facit137 ,#facit138 ,#facit139 , #facit140 , #facit141 ,#facit142 ,#facit143 ,#facit144 , #facit145 , #facit146 ,#facit147 ,#facit148 ,#facit149 , #facit150 , #facit151 ,#facit152 ,#facit153 ,#facit154 , #facit155 ,#facit156 ,#facit157 ,#facit158 ,#facit159 , #facit160 , #facit161 ,#facit162 ,#facit163 ,#facit164 , #facit165 , #facit166 ,#facit167 ,#facit168 ,#facit169 , #facit170 , #facit171 ,#facit172 ,#facit173 ,#facit174 , #facit175 , #facit176 ,#facit177 ,#facit178 ,#facit179 , #facit180 , #facit181 ,#facit182 ,#facit183 ,#facit184 , #facit185, #facit186 ,#facit187 ,#facit188 ,#facit189 , #facit190, #facit191 ,#facit192 ,#facit193 ,#facit194 , #facit195, #facit196 ,#facit197 ,#facit198 ,#facit199 , #facit200 ,#facit201 ,#facit202 ,#facit203 ,#facit204 , #facit205 ,#facit206 ,#facit207 ,#facit208 ,#facit209 , #facit210 , #facit211 ,#facit212 ,#facit213 ,#facit214 , #facit215 , #facit216 ,#facit217 ,#facit218 ,#facit219 , #facit220 , #facit221 ,#facit222 ,#facit223 ,#facit224 , #facit225   {
+    width:25px;
+    height :25px;
+    border:1px solid rgb(109, 109, 109);  
+}
 #color {
     display: flex;
     flex-direction: row;  
