--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -85,10 +85,9 @@ h1 {
 }
 
 #playersInfo {
-    width: 20%;
+    width: 15%;
     margin-right: 20px;
     padding-right: 10px;
-    background-color: red;
 }
 
 h2 {
@@ -97,6 +96,7 @@ h2 {
 
 h3 {
     font-size: 14px;
+    text-transform: uppercase;
 }
 
 i {
@@ -124,22 +124,21 @@ hr {
 
 #pic {
     width: 100%;
-    height: 60%;
     border-radius: 15px;
     display: flex;
     flex-direction: column;
-    background-color: rgb(82, 129, 121);
     text-align: center;
-    padding-top: 10px;
     margin-bottom: 10px;
     color: #000;
     font-size: 10px;
+    padding: 10px;
+    background-color: #fff;
 }
 
  
 #chatBox {
     width: 100%;
-    height: 40%;
+    height: 35%;
     border-radius: 15px;
     display: flex;
     flex-direction: column;
