Late night experimentations making me feel deep imposter syndrome

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -270,3 +270,19 @@ i {
     background-color: blue;
 }
 
+.icon-red {
+    color: red;
+}
+
+.icon-green {
+    color: green;
+}
+
+.icon-yellow {
+    color: yellow;
+}
+
+.icon-blue {
+    color: blue;
+}
+
